--- a/_posts/2020-04-06-读《小狗钱钱》.md
+++ b/_posts/2020-04-06-读《小狗钱钱》.md
@@ -1,6 +1,6 @@
 《*小狗钱钱*》是一本非常不错的儿童理财启蒙的童话故事。许多人可能看到这句话就已经劝退了，**儿童**、**启蒙**、**童话**？这本书似乎不太适合我？人往往有一种迷之自信，认为随着年龄增长，自己在各方面的见识认知也都会自然而然齐头并进地一起增长，这种自信可真是傲慢至极呢！说一句不客气的话，许多人对“理财”理解的粗鄙幼稚程度，相较儿童，其实并无二致。理财，当然是越早培养越好，如果能在儿童时期就有这样的启蒙，从小塑造一个健康合理的金钱观，自然是受益匪浅再好不过。但就如同**种一棵树最好的时候是十年前，其次就是现在。**那么就趁现在，请卸下你“成年人”的包袱，一起来读一读这本儿童启蒙吧！
 
-故事的主人公是一个叫*吉娅*的12岁小女孩儿，她意外收养了一条狗，取名叫做*钱钱*。钱钱会说话，后来成了*吉娅*的贵人，指导*吉娅*学习理财，不光实现了买一台笔记本电脑、旅游等小目标，还帮爸爸妈妈拜托了债务危机，自己也实现了财务自由，成为了当地小有名气的理财明星。
+故事的主人公是一个叫*吉娅*的12岁小女孩儿，她意外收养了一条狗，取名叫做*钱钱*。钱钱会说话，后来成了*吉娅*的贵人，指导*吉娅*学习理财，不光实现了买一台笔记本电脑、旅游等小目标，还帮爸爸妈妈摆脱了债务危机，自己也实现了财务自由，成为了当地小有名气的理财明星。
 
 *吉娅*的理财之路可以粗略分为2个阶段：第一桶金，财富增长。*吉娅*赚取第一桶金的过程中有一个细节，*吉娅*咨询表哥*马塞尔*怎样赚钱，*马塞尔*告诉*吉娅*，他在敬老院帮老人买东西，陪他们散步就可以赚钱，*吉娅*马上感慨“可惜我家附近没有敬老院”，马上被表哥无情嘲讽，“对呀，而且你也不叫*马塞尔*”。书中告诉我们，怎样赚钱应该考虑**你知道或能做什么，以及你有什么**。从这些角度切入，而不是看到别人通过某一种方式赚到钱就亦步亦趋。这是思维的懒惰，而且别人做了能赚钱的事情，你不一定也能做得好，别人风趣幽默舌灿莲花，陪人聊天就能赚钱，也有人不善言辞社交恐惧，就挣不了这份钱。后来*吉娅*从自身实际出发，通过帮邻居遛狗，也赚到了第一桶金。整本书苦口婆心循循善诱，要教会我们的正是**道**层面的思维方式，我们不能迷失于**术**层面的途径方法中。
 
